--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "Evan",
+  "name": "Meet Evan",
   "description": "Evan is a personal assistant for anyone using SharePoint",
-  "version": "1.0",
+  "version": "0.0.1",
 
   "browser_action": {
    "default_icon": "assets/icon.png",
@@ -11,5 +11,8 @@
   },
   "permissions": [
    "activeTab"
-   ]
+   ],
+   "icons": { "16": "assets/icon.png",
+              "48": "assets/icon.png",
+             "128": "assets/icon.png" }
 }
